--- a/newPlaylist.html
+++ b/newPlaylist.html
@@ -7,10 +7,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>            
             .nav-item a{
@@ -20,43 +19,10 @@
                 background-color: #f9f7f7;
                 border-radius: 10px;
             }
-            .nav-link:hover{
-                background-color: white;
-                color: black !important;
-                border-radius: 10px;
-            }
         </style>
-        <script>  
-            $(function(){ 
-                $("#sticky-footer").load("footer.html");  
-            }); 
-        </script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-            <div class="navbar-brand" href="#">
-                <i class='fas fa-headphones' style='font-size:36px'></i> Beat Buzz
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav navbar-right">
-                    <li class="nav-item">
-                        <a class="nav-link" href="dashboard.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="newSong.html" >Upload / Update Song</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="newPlaylist.html" >New Playlist</a>
-                    </li>    
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html" >Logout</a>
-                    </li>    
-                </ul>
-            </div>  
-        </nav>      
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top"></nav>      
         <br><br>
         <b><h4 style="text-align: center;">New Playlist</h4></b>
         <br> 
@@ -97,5 +63,14 @@
         </div>
         <br><br> 
         <footer id="sticky-footer" class="py-4 bg-dark text-white-50"></footer>
+        
+        <script>  
+            $("#sticky-footer").load("footer.html"); 
+            $(".navbar").load("header.html",
+                function(){
+                    $("#newPlaylist").toggleClass("nav-item active");
+                }
+            );
+        </script>
     </body>
 </html>
